plugins {
	id('idea')
	id('maven-publish')
	// todo replace with mc-publish, as these plugins do not support Gradle configuration cache
	id('com.modrinth.minotaur') version '2.+'
	id('com.matthewprenger.cursegradle') version '1.4.0'
	id('net.neoforged.moddev') version '2.0.80'
}

tasks.named('wrapper', Wrapper).configure {
	distributionType = Wrapper.DistributionType.BIN
}

group = 'forestry'
version = forestryVersion
base.archivesName = "forestry-$minecraftVersion"

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
	version = "$neoForgeVersion"

	accessTransformers = files('src/main/resources/META-INF/accesstransformer.cfg')
	validateAccessTransformers = true

	// Add Parchment parameter mappings
	parchment {
		mappingsVersion = project.mappingsVersion
		minecraftVersion = project.minecraftVersion
	}

	runs {
		configureEach {
			logLevel = org.slf4j.event.Level.DEBUG
			jvmArgument '-XX:+AllowEnhancedClassRedefinition'
			jvmArgument '-XX:+IgnoreUnrecognizedVMOptions'
		}

		client {
			client()
		}

		server {
			server()
			gameDirectory.set(project.layout.projectDirectory.dir('run/server'))
			programArgument '--nogui'
		}

		data {
			data()
			programArguments.addAll("--mod", "forestry", "--all", "--output", file("src/generated/resources/").absolutePath, "--existing", file("src/main/resources/").absolutePath)
		}
	}

	mods {
		forestry {
			sourceSet sourceSets.main
		}
	}
}

repositories {
	maven {
		name = 'jei'
		url = 'https://maven.blamejared.com/'
		content { includeGroup 'mezz.jei' }
	}
	maven {
		name = 'Patchouli'
		url = 'https://maven.blamejared.com/'
		content { includeGroup 'vazkii.patchouli' }
	}
	maven {
		name = 'Architectury API'
		url = 'https://maven.architectury.dev'
		content { includeGroup 'dev.architectury' }
	}
	maven {
		name = 'KubeJS and Rhino'
		url = 'https://maven.latvian.dev/releases'
		content { includeGroupAndSubgroups 'dev.latvian' }
	}
	maven {
		name = 'Mekanism'
		url = 'https://modmaven.dev/'
		content { includeGroup 'mekanism' }
	}
	maven {
		name = "Curios"
		url = "https://maven.theillusivec4.top/"
		content { includeGroup 'top.theillusivec4.curios' }
	}
	maven {
		url = 'https://cursemaven.com'
		content { includeGroup 'curse.maven' }
	}
	maven {
		name = 'ModKit and KubeJS transitive dep'
		url = 'https://jitpack.io'
		content {
			includeGroup 'com.github.thedarkcolour'
			includeGroup 'com.github.rtyley'
		}
	}
}

dependencies {
	// JEI OPTIONAL
	compileOnly "mezz.jei:jei-$minecraftVersion-neoforge-api:$jeiVersion"
	runtimeOnly "mezz.jei:jei-$minecraftVersion-neoforge:$jeiVersion"
	// KubeJS OPTIONAL
	implementation "dev.architectury:architectury-neoforge:${architectury_version}"
	implementation "dev.latvian.mods:rhino:${rhino_version}"
	implementation "dev.latvian.mods:kubejs-neoforge:${kubejs_version}"
	// Curios Optional
	implementation "top.theillusivec4.curios:curios-neoforge:${curiosVersion}+${minecraftVersion}"
	// PATCHOULI REQUIRED
	compileOnly "vazkii.patchouli:Patchouli:$patchouliVersion-NEOFORGE:api"
	runtimeOnly "vazkii.patchouli:Patchouli:$patchouliVersion-NEOFORGE"
	// ModKit DEV ONLY
	implementation 'com.github.thedarkcolour:ModKit:0cfafa780c'
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

var generateModMetadata = tasks.register('generateModMetadata', ProcessResources) {
	var replaceProperties = [
		'version'              : project.version,
		'forgeVersionRange'    : forgeVersionRange,
		'jeiVersionRange'      : jeiVersionRange,
		'patchouliVersionRange': patchouliVersionRange,
		'fmlVersionRange'      : fmlVersionRange,
	]
	inputs.properties replaceProperties
	expand replaceProperties

	from 'src/main/templates'
	into 'build/generated/sources/modMetadata'
}
sourceSets.main.resources.srcDir generateModMetadata

neoForge.ideSyncTask generateModMetadata

jar {
	from sourceSets.main.output.classesDirs
	from sourceSets.main.output.resourcesDir

	manifest {
		attributes([
			"Specification-Title"     : "Forestry",
			"Specification-Vendor"    : "SirSengir",
			"Specification-Version"   : "${project.version}",
			"Implementation-Title"    : "${project.name}",
			"Implementation-Version"  : "${project.version}",
			"Implementation-Vendor"   : "SirSengir",
			"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
		])
	}
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = "UTF-8"
	options.compilerArgs << "-Xmaxerrs" << "2000"
}

idea {
	module {
		downloadSources = true
		downloadJavadoc = true
	}
}

javadoc {
	source = sourceSets.main.allJava
	classpath = sourceSets.main.compileClasspath + sourceSets.main.output

	options.addStringOption("Xdoclint:none", "-quiet")
	options.encoding = "UTF-8"

	include "forestry/api/**"
}

tasks.register('javadocJar', Jar) {
	dependsOn javadoc
	archiveClassifier.set("javadoc")
	from javadoc.destinationDir
}

tasks.register('sourcesJar', Jar) {
	archiveClassifier.set("sources")
	from sourceSets.main.allJava
}

tasks.register('apiJar', Jar) {
	archiveClassifier.set("api")
	// api jar ist just a development aid and serves as both a binary and source jar simultaneously
	from sourceSets.main.output
	from sourceSets.main.allJava

	include "forestry/api/**"
}

artifacts {
	archives javadocJar
	archives sourcesJar
	archives apiJar
}

publishing {
	afterEvaluate {
		publications {
			mavenJava(MavenPublication) {
				groupId = project.group
				artifactId = project.base.archivesName
				version = project.version

				// ForgeGradle will generate wild dependency definitions, see https://github.com/MinecraftForge/ForgeGradle/issues/584
				// Since we don't actually depend on anything, just remove the entire node.
				pom.withXml {
					asNode().remove(asNode().dependencies)
				}

				from components.java
				artifact sourcesJar
				artifact javadocJar
				artifact apiJar
			}
		}
	}

	repositories {
		maven {
			def releasesRepoUrl = uri("$buildDir/repos/releases")
			def snapshotsRepoUrl = uri("$buildDir/repos/snapshots")

			name = "Project"
			url = version.toString().endsWith("SNAPSHOT") ? snapshotsRepoUrl : releasesRepoUrl
		}

		maven {
			credentials {
				username = System.getenv("MODMAVEN_USER")
				password = System.getenv("MODMAVEN_PASSWORD")
			}

			name = "Modmaven"
			url = "https://modmaven.dev/artifactory/local-releases/"
		}
	}
}

if (System.getenv("CURSEFORGE_TOKEN")) {
	curseforge {
		apiKey = System.getenv("CURSEFORGE_TOKEN")

		project {
			id = project.curseforgeId
			changelogType = "markdown"
			changelog = getChangelog(version)

			releaseType = "release"

			addGameVersion(project.minecraftVersion)
			addGameVersion("Forge")
			addGameVersion("Java 17")

			mainArtifact(reobfJar.archiveFile) {
				displayName = "Forestry: Community Edition ${project.version}"
				relations {
					optionalDependency 'jei'
					requiredDependency 'patchouli'
				}
			}
		}
	}
}

modrinth {
	token = System.getenv("MODRINTH_TOKEN")
	projectId = project.modrinthId
	versionName = "Forestry: Community Edition $version"
	versionNumber = version.toString()
	versionType = "release"
	gameVersions = [minecraftVersion]
	loaders = ["forge"]
	changelog = getChangelog(project.version)

	uploadFile = jar
	additionalFiles.add(sourcesJar)
	additionalFiles.add(apiJar)
	additionalFiles.add(javadocJar)

	dependencies {
		optional.project("jei")
		required.project("patchouli")
	}
}

static def getChangelog(Object version) {
	version = version.toString()

	def file = new File('changelog.md')
	if (!file.exists()) {
		return "Changelog file not found"
	}

	// Relies on the changelog block being "##blahblahblah_VERSION" where _ is a space
	def content = file.text.normalize().split("##.* ")

	for (final def chunk in content) {
		if (chunk.isEmpty()) continue

		def lineTerminatorIndex = chunk.findIndexOf { c -> c == '\n' || c == '\r' }
		def versionString = chunk.substring(0, lineTerminatorIndex)

		if (versionString == version) {
			return "## Forestry $version\n" + chunk.substring(lineTerminatorIndex + 1)
		}
	}

	// Fallback in case this fails
	return "Forestry Update ${version}"
}
